fix clickable link area overflow on main page

--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -34,7 +34,7 @@ img:hover {
 }
 
 .center {
-  display: block;
+  display: inline-block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
